tests/snapshots/cli_insta_yaml_native__compare.exit-status.2.snap
---
source: tests/cli_insta_yaml_native.rs
info:
  program: sem-tool
  args:
    - compare
    - "-e"
    - 1.2.3
    - 4.5.6
---
success: false
exit_code: 100
----- stdout -----
---
semantic_ordering: Less
lexical_ordering: Less
----- stderr -----
