tests/snapshots/cli_insta_yaml_native__compare.exit-status.5.snap
---
source: tests/cli_insta_yaml_native.rs
info:
  program: sem-tool
  args:
    - compare
    - "-e"
    - 1.2.3+0
    - 1.2.3+1
---
success: false
exit_code: 110
----- stdout -----
---
semantic_ordering: Equal
lexical_ordering: Less
----- stderr -----
