tests/snapshots/cli_insta_yaml_native__compare.exit-status.6.snap
---
source: tests/cli_insta_yaml_native.rs
info:
  program: sem-tool
  args:
    - compare
    - "-e"
    - "-s"
    - 1.2.3+0
    - 1.2.3+1
---
success: true
exit_code: 0
----- stdout -----
---
semantic_ordering: Equal
lexical_ordering: Less
----- stderr -----
